<?xml version="1.0" encoding="utf-8"?>

<resources>

    <string name="app_name"><b>Zorion</b></string>

    <!-- Authentication main text -->

    <string name="authentication_sign_in">Sign In</string>
    <string name="authentication_sign_up">Sign Up</string>

    <!-- Authentication hints -->

    <string name="authentication_hint_username">Username</string>
    <string name="authentication_hint_email">E-mail</string>
    <string name="authentication_hint_password">Password</string>

    <!-- Authentication UI strings -->

    <string name="authentication_string_forgot_password"><u>Forgot password</u></string>

    <!-- Authentication toast messages -->

    <string name="authentication_message_invalid_credentials">Sorry, but the credentials you entered are invalid.</string>
    <string name="authentication_message_invalid_username">Sorry, but the username you entered is invalid.</string>
    <string name="authentication_message_invalid_email">Sorry, but the email you entered is invalid.</string>
    <string name="authentication_message_invalid_password">Sorry, but the password you entered is invalid.</string>
    <string name="authentication_message_successful_sign_up">Successfully created a new account, redirecting you to the sign in page.</string>
    <string name="authentication_message_successful_sign_in">Successfully signed you in, redirecting you to your profile.</string>
    <string name="authentication_message_password_reset_email">Sent a password reset email, check your inbox.</string>

    <!-- Authentication exceptions toast messages -->

    <string name="authentication_exception_weak_password">Sorry, but the entered password is not strong enough.</string>
    <string name="authentication_exception_user_collision">This email already belongs to another user.</string>
    <string name="authentication_exception_incorrect_credentials">Sorry, but the credentials you entered are incorrect.</string>
    <string name="authentication_exception_invalid_user">This email does not belong to an account.</string>
    <string name="authentication_exception_network">Couldn\'t connect to the servers, try again later.</string>
    <string name="empty" />

    <!-- Profile main strings -->

    <string name="profile_my_profile">My profile</string>

    <!-- Profile UI strings -->

    <string name="profile_title_username"><b>Username</b></string>
    <string name="profile_title_email"><b>Email</b></string>

    <!-- Profile toast messages -->

    <string name="profile_message_username_changed">Successfully updated your username.</string>
    <string name="profile_message_email_changed">Successfully updated your email.</string>
    <string name="profile_message_exit_application">Press once again to close the app.</string>
    <string name="chat_hint_basic_instruction">Type a message and press enter to send</string>

</resources>