<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.Signin"

    android:background="@color/zorionGray"

    >

    <ScrollView

        android:id="@+id/signInScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <LinearLayout

            android:id="@+id/signInLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_gravity="center_vertical"

            >

            <TextView

                android:id="@+id/signInTitleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:gravity="center_horizontal"

                android:text="@string/authentication_sign_in"
                android:textSize="64sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/bubbler"

                android:background="@drawable/authentication_model_title"

                />

            <EditText

                android:id="@+id/signInEmailEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"

                android:layout_gravity="center_horizontal"

                android:drawableStart="@drawable/authentication_icon_email"
                android:drawablePadding="5dp"

                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/asap"

                android:hint="@string/authentication_hint_email"
                android:autofillHints=" "
                android:textColorHint="@color/zorionLighterGray"
                android:inputType="textEmailAddress"
                android:maxLength="32"

                android:background="@drawable/authentication_model_input"

                />

            <EditText

                android:id="@+id/signInPasswordEditText"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"

                android:layout_gravity="center_horizontal"

                android:drawableStart="@drawable/authentication_icon_password"
                android:drawablePadding="5dp"

                android:textColor="@color/white"
                android:textSize="16sp"
                android:fontFamily="@font/asap"

                android:hint="@string/authentication_hint_password"
                android:autofillHints=" "
                android:textColorHint="@color/zorionLighterGray"
                android:inputType="textPassword"
                android:maxLength="32"

                android:background="@drawable/authentication_model_input"

                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                android:gravity="center_horizontal"
                android:layout_marginTop="15dp"

                >

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/signInButtonCircleImageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginEnd="10dp"

                    android:background="@drawable/authentication_model_button"

                    android:padding="8dp"
                    android:src="@drawable/authentication_icon_arrow"

                    />

                <de.hdodenhof.circleimageview.CircleImageView

                    android:id="@+id/signInPasswordRecoveryButtonCircleImageView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="center_horizontal"

                    android:background="@drawable/authentication_model_button"

                    android:padding="12dp"
                    android:src="@drawable/authentication_icon_reset_password"

                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>